--- a/source-code/angular.json
+++ b/source-code/angular.json
@@ -50,7 +50,7 @@
               "optimization": true,
               "sourceMap": false,
               "extractLicenses": true,
-              "namedChunks": false,
+              "namedChunks": false
               
             },
             "development": {
