--- a/source-code/package.json
+++ b/source-code/package.json
@@ -24,7 +24,10 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
     "@fortawesome/fontawesome-free": "^6.7.1",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
